<resources>
    <string name="app_name">VK case</string>
    <string name="button_chat">Button Chat</string>
    <string name="button_members">Button members</string>
    <string name="button_member_tiles">Button member tiles</string>
    <string name="button_videocam">Button videocam</string>
    <string name="round_minimize">Round minimize</string>
    <string name="button_mic">Button mic</string>
    <string name="button_waving_hand">Button waving hand</string>
    <string name="button_call_end">Button call end</string>
    <string name="expand_more">Expand more</string>
    <string name="your_avatar">Your avatar</string>
    <string name="member_1_avatar">Member 1 avatar</string>
    <string name="circle_for_videocam">Circle for videocam</string>
    <string name="you">You</string>
    <string name="hello">Hello</string>
    <string name="phone_long_contact_for_test_and_test_again_again_again">Phone Long Contact For Test And Test Again Again Again</string>
    <string name="icon_videocam">Icon videocam</string>
    <string name="icon_mic">Icon mic</string>
    <string name="icon_waving_hand">Icon waving hand</string>
    <string name="icon_call_end">Icon call end</string>
    <string name="circle_avatar_s_member">Circle avatar\'s member</string>
</resources>