<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="@color/black">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_expand_more_24"
        android:id="@+id/outline_expand_more"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/top_panel"
        android:contentDescription="@string/expand_more"
        app:layout_constraintVertical_chainStyle="spread">
    </ImageView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_panel"
        app:layout_constraintTop_toBottomOf="@id/outline_expand_more"
        app:layout_constraintBottom_toTopOf="@id/banner_you">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_chat_bubble_outline_24"
            android:background="@android:color/transparent"
            android:id="@+id/button_chat"
            android:padding="10dp"
            android:contentDescription="@string/button_chat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_members"
            app:layout_constraintHorizontal_chainStyle="spread_inside">
        </ImageButton>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/outline_people_24"
            android:background="@android:color/transparent"
            android:id="@+id/button_members"
            android:contentDescription="@string/button_members"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button_chat"
            app:layout_constraintRight_toLeftOf="@id/outline_space_dashboard">
        </ImageButton>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/outline_space_dashboard_24"
            android:background="@android:color/transparent"
            android:id="@+id/outline_space_dashboard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button_members"
            android:contentDescription="@string/button_member_tiles">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/top_panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/banner_member"
        android:id="@+id/banner_you"
        android:background="@drawable/rounded_rectangle_blue">
    </View>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/circle_avatar_you"
        app:layout_constraintTop_toTopOf="@id/banner_you"
        app:layout_constraintLeft_toLeftOf="@id/banner_you"
        app:layout_constraintRight_toRightOf="@id/banner_you"
        app:layout_constraintBottom_toBottomOf="@id/banner_you"
        android:src="@drawable/circle"
        android:contentDescription="@string/your_avatar">
    </ImageView>
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/boy"
        android:background="@drawable/circle"
        android:id="@+id/boy"
        app:layout_constraintTop_toTopOf="@id/circle_avatar_you"
        app:layout_constraintLeft_toLeftOf="@id/circle_avatar_you"
        app:layout_constraintRight_toRightOf="@id/circle_avatar_you"
        app:layout_constraintBottom_toBottomOf="@id/circle_avatar_you"
        android:contentDescription="@string/your_avatar">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:text="@string/you"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/text_you"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/banner_you"
        app:layout_constraintRight_toRightOf="@id/banner_you"
        app:layout_constraintBottom_toBottomOf="@id/banner_you"
        android:paddingBottom="10dp"
        app:drawableRightCompat="@drawable/baseline_mic_off_16"
        android:drawablePadding="5dp">
    </TextView>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/banner_you"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/round_minimize"
        android:id="@+id/banner_member"
        android:background="@drawable/rounded_rectangle_rose">
    </View>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/circle_avatar_member"
        app:layout_constraintTop_toTopOf="@id/banner_member"
        app:layout_constraintLeft_toLeftOf="@id/banner_member"
        app:layout_constraintRight_toRightOf="@id/banner_member"
        app:layout_constraintBottom_toBottomOf="@id/banner_member"
        android:src="@drawable/circle"
        android:contentDescription="@string/circle_avatar_s_member">
    </ImageView>
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/girl"
        android:id="@+id/girl"
        app:layout_constraintTop_toTopOf="@id/circle_avatar_member"
        app:layout_constraintLeft_toLeftOf="@id/circle_avatar_member"
        app:layout_constraintRight_toRightOf="@id/circle_avatar_member"
        app:layout_constraintBottom_toBottomOf="@id/circle_avatar_member"
        android:contentDescription="@string/member_1_avatar">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingHorizontal="20dp"
        android:text="@string/phone_long_contact_for_test_and_test_again_again_again"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/text_member"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/banner_member"
        app:layout_constraintRight_toRightOf="@id/banner_member"
        app:layout_constraintBottom_toBottomOf="@id/banner_member"
        android:paddingBottom="10dp"
        app:drawableRightCompat="@drawable/baseline_mic_off_16"
        android:drawablePadding="5dp">
    </TextView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/round_minimize_24"
        android:id="@+id/round_minimize"
        app:layout_constraintTop_toBottomOf="@id/banner_member"
        app:layout_constraintBottom_toTopOf="@id/bottom_panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/round_minimize">
    </ImageView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_panel"
        app:layout_constraintTop_toBottomOf="@id/round_minimize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_mic"
            android:background="@drawable/circle"
            android:id="@+id/btn_videocam"
            android:contentDescription="@string/button_videocam"
            app:layout_constraintHorizontal_chainStyle="spread">
        </ImageButton>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_videocam_off_24"
            android:id="@+id/icon_videocam"
            app:layout_constraintTop_toTopOf="@id/btn_videocam"
            app:layout_constraintBottom_toBottomOf="@id/btn_videocam"
            app:layout_constraintLeft_toLeftOf="@id/btn_videocam"
            app:layout_constraintRight_toRightOf="@id/btn_videocam"
            android:contentDescription="@string/icon_videocam">
        </ImageView>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_videocam"
            app:layout_constraintRight_toLeftOf="@id/btn_waving_hand"
            android:id="@+id/btn_mic"
            android:background="@drawable/circle"
            android:contentDescription="@string/button_mic">
        </ImageButton>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_mic_off_24"
            android:id="@+id/icon_mic"
            app:layout_constraintTop_toTopOf="@id/btn_mic"
            app:layout_constraintBottom_toBottomOf="@id/btn_mic"
            app:layout_constraintLeft_toLeftOf="@id/btn_mic"
            app:layout_constraintRight_toRightOf="@id/btn_mic"
            android:contentDescription="@string/icon_mic">
        </ImageView>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_mic"
            app:layout_constraintRight_toLeftOf="@id/btn_call_end"
            android:id="@+id/btn_waving_hand"
            android:contentDescription="@string/button_waving_hand">
        </ImageButton>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_waving_hand_24"
            android:id="@+id/icon_waving_hand"
            app:layout_constraintTop_toTopOf="@id/btn_waving_hand"
            app:layout_constraintBottom_toBottomOf="@id/btn_waving_hand"
            app:layout_constraintLeft_toLeftOf="@id/btn_waving_hand"
            app:layout_constraintRight_toRightOf="@id/btn_waving_hand"
            android:contentDescription="@string/icon_waving_hand">
        </ImageView>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_waving_hand"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/circle_red"
            android:id="@+id/btn_call_end"
            android:contentDescription="@string/button_call_end">
        </ImageButton>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_call_end_24"
            android:background="@color/red"
            android:id="@+id/icon_call_end"
            app:layout_constraintTop_toTopOf="@id/btn_call_end"
            app:layout_constraintBottom_toBottomOf="@id/btn_call_end"
            app:layout_constraintLeft_toLeftOf="@id/btn_call_end"
            app:layout_constraintRight_toRightOf="@id/btn_call_end"
            android:contentDescription="@string/icon_call_end">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>